--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ p {
 
 /* Jumbotron  */
 .jumbotron {
-  background-image: url(../images/Clouds.png);
+  background-image: url(../images/shelter-FdBGX44aNZM-unsplash.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   height: 500px;
